[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tilemaps2.tres" type="TileSet" id=2]
[ext_resource path="res://TitleScreen_New/CanvasFade.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets_industrial_proj/building_blocks_indu.png" type="Texture" id=4]
[ext_resource path="res://src/Levels/LevelTemplate.gd" type="Script" id=5]
[ext_resource path="res://src/Objects/PortalScene.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Objects/PorterScene.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Levels/Level06.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Objects/Spike.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/UI/UserInterface.tscn" type="PackedScene" id=12]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=11]
0/name = "building_blocks_indu.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 48, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 5, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 1 ]
0/autotile/icon_coordinate = Vector2( 1, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [ Vector2( 0, 0 ), SubResource( 1 ), Vector2( 0, 1 ), SubResource( 2 ), Vector2( 1, 0 ), SubResource( 3 ), Vector2( 2, 0 ), SubResource( 4 ), Vector2( 2, 1 ), SubResource( 5 ) ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [ Vector3( 0, 0, 2 ), Vector3( 0, 1, 2 ), Vector3( 1, 0, 2 ), Vector3( 2, 0, 2 ), Vector3( 2, 1, 2 ) ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level05" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -184.0, -576.0 ],
"_edit_vertical_guides_": [ 1184.0, 528.0, 550.6, 528.0 ]
}

[node name="UserInterface" type="CanvasLayer" parent="."]
layer = 101

[node name="UserInterface" parent="UserInterface" instance=ExtResource( 12 )]
level_length_sec = 16

[node name="Area2D" parent="." instance=ExtResource( 9 )]
position = Vector2( 448, -64 )

[node name="TeleportPos" parent="Area2D" index="4"]
position = Vector2( 32, -152 )

[node name="Objects" type="Node2D" parent="."]

[node name="PortalScene" parent="Objects" instance=ExtResource( 7 )]
position = Vector2( 64, -456 )

[node name="PortalHitboxArea2D" parent="Objects/PortalScene" index="0"]
next_scene = ExtResource( 10 )

[node name="portalRed" parent="Objects/PortalScene/PortalHitboxArea2D" index="2"]
visible = false

[node name="Tilemaps" type="Node" parent="."]

[node name="BuildingTiles" type="TileMap" parent="Tilemaps"]
position = Vector2( 0, -16 )
tile_set = SubResource( 11 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1703935, 0, 0, -1703934, 0, 1, -1703933, 0, 1, -1703932, 0, 1, -1703931, 0, 2, -1703927, 0, 0, -1703926, 0, 2, -1638399, 0, 65536, -1638398, 0, 65537, -1638397, 0, 65537, -1638396, 0, 65537, -1638395, 0, 65538, -1638391, 0, 131072, -1638390, 0, 131074, -1638383, 0, 0, -1638382, 0, 2, -1572863, 0, 65536, -1572862, 0, 65537, -1572861, 0, 65537, -1572860, 0, 65537, -1572859, 0, 65538, -1572847, 0, 131072, -1572846, 0, 131074, -1572845, 0, 1, -1507327, 0, 131072, -1507326, 0, 131073, -1507325, 0, 131073, -1507324, 0, 131073, -1507323, 0, 131074, -1441768, 0, 0, -1441767, 0, 1, -1441766, 0, 1, -1441765, 0, 2, -1376235, 0, 0, -1376234, 0, 2, -1376232, 0, 65536, -1376231, 0, 65537, -1376230, 0, 65537, -1376229, 0, 65538, -1310706, 0, 0, -1310705, 0, 1, -1310704, 0, 1, -1310703, 0, 2, -1310699, 0, 131072, -1310698, 0, 131074, -1310696, 0, 65536, -1310695, 0, 65537, -1310694, 0, 65537, -1310693, 0, 65538, -1245170, 0, 65536, -1245169, 0, 65537, -1245168, 0, 65537, -1245167, 0, 65538, -1245160, 0, 131072, -1245159, 0, 131073, -1245158, 0, 131073, -1245157, 0, 131074, -1179638, 0, 0, -1179637, 0, 1, -1179636, 0, 2, -1179634, 0, 131072, -1179633, 0, 131073, -1179632, 0, 131073, -1179631, 0, 131074, -1114102, 0, 131072, -1114101, 0, 131073, -1114100, 0, 131074, -1048575, 0, 0, -1048574, 0, 1, -1048573, 0, 2, -983039, 0, 65536, -983038, 0, 65537, -983037, 0, 65538, -917503, 0, 65536, -917502, 0, 65537, -917501, 0, 1, -917500, 0, 1, -917499, 0, 1, -917498, 0, 2, -851967, 0, 65536, -851966, 0, 65537, -851965, 0, 65537, -851964, 0, 65537, -851963, 0, 65537, -851962, 0, 65538, -851960, 0, 0, -851959, 0, 2, -786431, 0, 65536, -786430, 0, 65537, -786429, 0, 65537, -786428, 0, 65537, -786427, 0, 65537, -786426, 0, 65538, -786424, 0, 65536, -786423, 0, 65538, -786421, 0, 0, -786420, 0, 1, -786419, 0, 1, -786418, 0, 1, -786417, 0, 1, -786416, 0, 2, -786410, 0, 0, -786409, 0, 2, -786407, 0, 0, -786406, 0, 1, -786405, 0, 1, -786404, 0, 1, -786403, 0, 1, -786402, 0, 2, -720895, 0, 65536, -720894, 0, 65537, -720893, 0, 65537, -720892, 0, 65537, -720891, 0, 65537, -720890, 0, 65538, -720888, 0, 131072, -720887, 0, 131074, -720885, 0, 65536, -720884, 0, 65537, -720883, 0, 65537, -720882, 0, 65537, -720881, 0, 65537, -720880, 0, 65538, -720877, 0, 0, -720876, 0, 2, -720874, 0, 65536, -720873, 0, 65538, -720871, 0, 65536, -720870, 0, 65537, -720869, 0, 65537, -720868, 0, 65537, -720867, 0, 65537, -720866, 0, 65538, -655359, 0, 65536, -655358, 0, 65537, -655357, 0, 65537, -655356, 0, 65537, -655355, 0, 65537, -655354, 0, 65538, -655349, 0, 131072, -655348, 0, 131073, -655347, 0, 131073, -655346, 0, 1, -655345, 0, 65537, -655344, 0, 65538, -655341, 0, 131072, -655340, 0, 131074, -655338, 0, 131072, -655337, 0, 131074, -655335, 0, 65536, -655334, 0, 65537, -655333, 0, 65537, -655332, 0, 65537, -655331, 0, 65537, -655330, 0, 65538, -589823, 0, 131072, -589822, 0, 131073, -589821, 0, 131073, -589820, 0, 131073, -589819, 0, 131073, -589818, 0, 131074, -589810, 0, 131072, -589809, 0, 131073, -589808, 0, 131074, -589799, 0, 131072, -589798, 0, 131073, -589797, 0, 131073, -589796, 0, 131073, -589795, 0, 131073, -589794, 0, 131074, -327671, 0, 0, -327670, 0, 1, -327669, 0, 1, -327668, 0, 1, -327667, 0, 2, -262135, 0, 65536, -262134, 0, 65537, -262133, 0, 65537, -262132, 0, 65537, -262131, 0, 1, -262130, 0, 1, -262129, 0, 2, -196606, 0, 0, -196605, 0, 1, -196604, 0, 1, -196603, 0, 1, -196602, 0, 1, -196601, 0, 2, -196599, 0, 131072, -196598, 0, 1, -196597, 0, 65537, -196596, 0, 65537, -196595, 0, 65537, -196594, 0, 65537, -196593, 0, 1, -196592, 0, 1, -196591, 0, 2, -131070, 0, 65536, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65537, -131065, 0, 65538, -131062, 0, 65536, -131061, 0, 65537, -131060, 0, 65537, -131059, 0, 65537, -131058, 0, 65537, -131057, 0, 65537, -131056, 0, 65537, -131055, 0, 1, -131054, 0, 1, -131053, 0, 1, -131052, 0, 1, -131051, 0, 1, -131050, 0, 2, -131045, 0, 0, -131044, 0, 1, -131043, 0, 2, -65534, 0, 131072, -65533, 0, 131073, -65532, 0, 131073, -65531, 0, 131073, -65530, 0, 131073, -65529, 0, 131074, -65526, 0, 131072, -65525, 0, 131073, -65524, 0, 131073, -65523, 0, 131073, -65522, 0, 131073, -65521, 0, 131073, -65520, 0, 1, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 65537, -65514, 0, 65538, -65509, 0, 131072, -65508, 0, 131073, -65507, 0, 131074, 16, 0, 131072, 17, 0, 131073, 18, 0, 131073, 19, 0, 131073, 20, 0, 131073, 21, 0, 131073, 22, 0, 131074 )

[node name="TileMap" type="TileMap" parent="Tilemaps"]
position = Vector2( 0, -16 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -2293760, 7, 0, -2293759, 7, 1, -2293758, 7, 1, -2293757, 7, 1, -2293756, 7, 1, -2293755, 7, 1, -2293754, 7, 1, -2293753, 7, 1, -2293752, 7, 1, -2293751, 7, 1, -2293750, 7, 1, -2293749, 7, 1, -2293748, 7, 1, -2293747, 7, 1, -2293746, 7, 1, -2293745, 7, 1, -2293744, 7, 1, -2293743, 7, 1, -2293742, 7, 1, -2293741, 7, 1, -2293740, 7, 1, -2293739, 7, 1, -2293738, 7, 1, -2293737, 7, 1, -2293736, 7, 1, -2293735, 7, 1, -2293734, 7, 1, -2293733, 7, 1, -2293732, 7, 1, -2293731, 7, 1, -2293730, 7, 1, -2293729, 7, 1, -2293728, 7, 2, -2228224, 7, 65536, -2228223, 7, 65537, -2228222, 7, 65537, -2228221, 7, 65537, -2228220, 7, 65537, -2228219, 7, 65537, -2228218, 7, 65537, -2228217, 7, 65537, -2228216, 7, 65541, -2228215, 7, 131073, -2228214, 7, 131073, -2228213, 7, 131073, -2228212, 7, 131073, -2228211, 7, 131073, -2228210, 7, 131073, -2228209, 7, 131073, -2228208, 7, 131073, -2228207, 7, 131073, -2228206, 7, 131073, -2228205, 7, 65542, -2228204, 7, 65537, -2228203, 7, 65537, -2228202, 7, 65537, -2228201, 7, 65537, -2228200, 7, 65537, -2228199, 7, 65537, -2228198, 7, 65537, -2228197, 7, 65537, -2228196, 7, 65537, -2228195, 7, 65537, -2228194, 7, 65537, -2228193, 7, 65537, -2228192, 7, 65538, -2162688, 7, 65536, -2162687, 7, 65537, -2162686, 7, 65537, -2162685, 7, 65541, -2162684, 7, 131073, -2162683, 7, 131073, -2162682, 7, 131073, -2162681, 7, 131073, -2162680, 7, 131074, -2162669, 7, 131072, -2162668, 7, 131073, -2162667, 7, 131073, -2162666, 7, 131073, -2162665, 7, 131073, -2162664, 7, 65542, -2162663, 7, 65537, -2162662, 7, 65537, -2162661, 7, 65537, -2162660, 7, 65537, -2162659, 7, 65537, -2162658, 7, 65537, -2162657, 7, 65537, -2162656, 7, 65538, -2097152, 7, 65536, -2097151, 7, 65537, -2097150, 7, 65541, -2097149, 7, 131074, -2097128, 7, 131072, -2097127, 7, 65542, -2097126, 7, 65537, -2097125, 7, 65537, -2097124, 7, 65537, -2097123, 7, 65537, -2097122, 7, 65537, -2097121, 7, 65537, -2097120, 7, 65538, -2031616, 7, 65536, -2031615, 7, 65537, -2031614, 7, 65538, -2031591, 7, 131072, -2031590, 7, 131073, -2031589, 7, 65542, -2031588, 7, 65537, -2031587, 7, 65537, -2031586, 7, 65537, -2031585, 7, 65537, -2031584, 7, 65538, -1966080, 7, 65536, -1966079, 7, 65541, -1966078, 7, 131074, -1966053, 7, 131072, -1966052, 7, 65542, -1966051, 7, 65537, -1966050, 7, 65537, -1966049, 7, 65537, -1966048, 7, 65538, -1900544, 7, 65536, -1900543, 7, 65538, -1900516, 7, 131072, -1900515, 7, 65542, -1900514, 7, 65537, -1900513, 7, 65537, -1900512, 7, 65538, -1835008, 7, 65536, -1835007, 7, 65538, -1834979, 7, 65536, -1834978, 7, 65537, -1834977, 7, 65537, -1834976, 7, 65538, -1769472, 7, 65536, -1769471, 7, 65538, -1769443, 7, 131072, -1769442, 7, 65542, -1769441, 7, 65537, -1769440, 7, 65538, -1703936, 7, 65536, -1703935, 7, 131077, -1703934, 7, 2, -1703927, 7, 3, -1703906, 7, 65536, -1703905, 7, 65537, -1703904, 7, 65538, -1638400, 7, 65536, -1638399, 7, 65537, -1638398, 7, 65538, -1638391, 7, 196612, -1638390, 7, 196609, -1638389, 7, 196609, -1638388, 7, 196610, -1638383, 7, 3, -1638370, 7, 65536, -1638369, 7, 65537, -1638368, 7, 65538, -1572864, 7, 65536, -1572863, 7, 65537, -1572862, 7, 131077, -1572861, 7, 1, -1572860, 7, 2, -1572847, 7, 196612, -1572846, 7, 196609, -1572845, 7, 196609, -1572844, 7, 196610, -1572834, 7, 65536, -1572833, 7, 65537, -1572832, 7, 65538, -1507328, 7, 65536, -1507327, 7, 65537, -1507326, 7, 65537, -1507325, 7, 65537, -1507324, 7, 262149, -1507323, 7, 196610, -1507299, 7, 0, -1507298, 7, 131078, -1507297, 7, 65537, -1507296, 7, 65538, -1441792, 7, 65536, -1441791, 7, 65537, -1441790, 7, 65541, -1441789, 7, 131073, -1441788, 7, 131074, -1441763, 7, 65536, -1441762, 7, 65537, -1441761, 7, 65537, -1441760, 7, 65538, -1376256, 7, 65536, -1376255, 7, 65537, -1376254, 7, 65538, -1376233, 7, 0, -1376232, 7, 1, -1376231, 7, 2, -1376229, 7, 0, -1376228, 7, 1, -1376227, 7, 131078, -1376226, 7, 65537, -1376225, 7, 65537, -1376224, 7, 65538, -1310720, 7, 65536, -1310719, 7, 65541, -1310718, 7, 131074, -1310704, 7, 3, -1310699, 7, 0, -1310698, 7, 1, -1310697, 7, 131078, -1310696, 7, 65537, -1310695, 7, 131077, -1310694, 7, 1, -1310693, 7, 131078, -1310692, 7, 65537, -1310691, 7, 65537, -1310690, 7, 65537, -1310689, 7, 65537, -1310688, 7, 65538, -1245184, 7, 65536, -1245183, 7, 65538, -1245169, 7, 0, -1245168, 7, 131080, -1245167, 7, 1, -1245166, 7, 1, -1245165, 7, 1, -1245164, 7, 1, -1245163, 7, 65545, -1245162, 7, 131073, -1245161, 7, 131073, -1245160, 7, 131073, -1245159, 7, 131073, -1245158, 7, 65542, -1245157, 7, 65537, -1245156, 7, 65537, -1245155, 7, 65537, -1245154, 7, 65537, -1245153, 7, 65537, -1245152, 7, 65538, -1179648, 7, 65536, -1179647, 7, 65538, -1179636, 7, 0, -1179635, 7, 1, -1179634, 7, 1, -1179633, 7, 65545, -1179632, 7, 131073, -1179631, 7, 131073, -1179630, 7, 131073, -1179629, 7, 131073, -1179628, 7, 131073, -1179627, 7, 131074, -1179622, 7, 131072, -1179621, 7, 65542, -1179620, 7, 65537, -1179619, 7, 65537, -1179618, 7, 65537, -1179617, 7, 65537, -1179616, 7, 65538, -1114112, 7, 65536, -1114111, 7, 65538, -1114103, 7, 196608, -1114102, 7, 196609, -1114101, 7, 196609, -1114100, 7, 196614, -1114099, 7, 131073, -1114098, 7, 131073, -1114097, 7, 131074, -1114085, 7, 131072, -1114084, 7, 131073, -1114083, 7, 65542, -1114082, 7, 65537, -1114081, 7, 65537, -1114080, 7, 65538, -1048576, 7, 65536, -1048575, 7, 65538, -1048547, 7, 131072, -1048546, 7, 131073, -1048545, 7, 65542, -1048544, 7, 65538, -983040, 7, 65536, -983039, 7, 131077, -983038, 7, 1, -983037, 7, 2, -983009, 7, 65536, -983008, 7, 65538, -917504, 7, 65536, -917503, 7, 65537, -917502, 7, 65537, -917501, 7, 131077, -917500, 7, 2, -917473, 7, 65536, -917472, 7, 65538, -851968, 7, 65536, -851967, 7, 65537, -851966, 7, 65537, -851965, 7, 65537, -851964, 7, 65538, -851937, 7, 65536, -851936, 7, 65538, -786432, 7, 65536, -786431, 7, 65537, -786430, 7, 65537, -786429, 7, 65537, -786428, 7, 131077, -786427, 7, 2, -786419, 7, 0, -786418, 7, 1, -786417, 7, 2, -786409, 0, 0, -786403, 7, 0, -786402, 7, 1, -786401, 7, 131078, -786400, 7, 65538, -720896, 7, 65536, -720895, 7, 65537, -720894, 7, 65537, -720893, 7, 65537, -720892, 7, 65537, -720891, 7, 131077, -720890, 7, 1, -720889, 7, 1, -720888, 7, 1, -720887, 7, 1, -720886, 7, 2, -720884, 7, 0, -720883, 7, 131078, -720882, 7, 65537, -720881, 7, 131077, -720880, 7, 1, -720879, 7, 2, -720877, 7, 3, -720874, 0, 0, -720873, 0, 0, -720871, 7, 0, -720870, 7, 1, -720869, 7, 2, -720867, 7, 65536, -720866, 7, 65537, -720865, 7, 65537, -720864, 7, 65538, -655360, 7, 65536, -655359, 7, 65537, -655358, 7, 65537, -655357, 7, 65537, -655356, 7, 65537, -655355, 7, 65537, -655354, 7, 65541, -655353, 7, 131073, -655352, 7, 131073, -655351, 7, 131073, -655350, 7, 196613, -655349, 7, 196609, -655348, 7, 196614, -655347, 7, 65542, -655346, 7, 65537, -655345, 7, 65537, -655344, 7, 65537, -655343, 7, 131077, -655342, 7, 1, -655341, 7, 131080, -655340, 7, 1, -655339, 7, 1, -655338, 7, 1, -655337, 7, 1, -655336, 7, 1, -655335, 7, 131078, -655334, 7, 65537, -655333, 7, 131077, -655332, 7, 1, -655331, 7, 131078, -655330, 7, 65537, -655329, 7, 65537, -655328, 7, 65538, -589824, 7, 65536, -589823, 7, 65537, -589822, 7, 65537, -589821, 7, 65541, -589820, 7, 131073, -589819, 7, 131073, -589818, 7, 131074, -589811, 7, 131072, -589810, 7, 131073, -589809, 7, 131073, -589808, 7, 131073, -589807, 7, 65542, -589806, 7, 65537, -589805, 7, 65537, -589804, 7, 65537, -589803, 7, 65541, -589802, 7, 131073, -589801, 7, 131073, -589800, 7, 131073, -589799, 7, 131073, -589798, 7, 131073, -589797, 7, 65542, -589796, 7, 65537, -589795, 7, 65537, -589794, 7, 65537, -589793, 7, 65537, -589792, 7, 65538, -524288, 7, 65536, -524287, 7, 65537, -524286, 7, 65541, -524285, 7, 131074, -524271, 7, 131072, -524270, 7, 131073, -524269, 7, 131073, -524268, 7, 131073, -524267, 7, 131074, -524261, 7, 131072, -524260, 7, 65542, -524259, 7, 65537, -524258, 7, 65537, -524257, 7, 65537, -524256, 7, 65538, -458752, 7, 65536, -458751, 7, 65541, -458750, 7, 131074, -458724, 7, 131072, -458723, 7, 65542, -458722, 7, 65537, -458721, 7, 65537, -458720, 7, 65538, -393216, 7, 65536, -393215, 7, 65538, -393187, 7, 65536, -393186, 7, 65537, -393185, 7, 65537, -393184, 7, 65538, -327680, 7, 65536, -327679, 7, 65538, -327651, 7, 65536, -327650, 7, 65537, -327649, 7, 65537, -327648, 7, 65538, -262144, 7, 65536, -262143, 7, 65538, -262133, 7, 3, -262131, 7, 3, -262115, 7, 65536, -262114, 7, 65537, -262113, 7, 65537, -262112, 7, 65538, -196608, 7, 65536, -196607, 7, 131077, -196606, 7, 2, -196603, 7, 3, -196599, 7, 0, -196598, 7, 1, -196597, 7, 131080, -196596, 7, 1, -196595, 7, 131079, -196593, 7, 3, -196579, 7, 65536, -196578, 7, 65537, -196577, 7, 65537, -196576, 7, 65538, -131072, 7, 65536, -131071, 7, 65537, -131070, 7, 131077, -131069, 7, 1, -131068, 7, 1, -131067, 7, 131080, -131066, 7, 1, -131065, 7, 1, -131064, 7, 1, -131063, 7, 131078, -131062, 7, 65537, -131061, 7, 65537, -131060, 7, 65537, -131059, 7, 131077, -131058, 7, 1, -131057, 7, 131080, -131056, 7, 1, -131055, 7, 2, -131053, 7, 0, -131052, 7, 1, -131051, 7, 2, -131043, 7, 65536, -131042, 7, 65537, -131041, 7, 65537, -131040, 7, 65538, -65536, 7, 65536, -65535, 7, 65537, -65534, 7, 65537, -65533, 7, 65537, -65532, 7, 65537, -65531, 7, 65537, -65530, 7, 65537, -65529, 7, 65537, -65528, 7, 65537, -65527, 7, 65537, -65526, 7, 65537, -65525, 7, 65537, -65524, 7, 65537, -65523, 7, 65537, -65522, 7, 65537, -65521, 7, 65537, -65520, 7, 65537, -65519, 7, 131077, -65518, 7, 1, -65517, 7, 131078, -65516, 7, 65537, -65515, 7, 131077, -65514, 7, 1, -65513, 7, 1, -65512, 7, 1, -65511, 7, 1, -65510, 7, 1, -65509, 7, 1, -65508, 7, 1, -65507, 7, 131078, -65506, 7, 65537, -65505, 7, 65537, -65504, 7, 65538, 0, 7, 131072, 1, 7, 131073, 2, 7, 131073, 3, 7, 131073, 4, 7, 131073, 5, 7, 131073, 6, 7, 131073, 7, 7, 131073, 8, 7, 131073, 9, 7, 131073, 10, 7, 131073, 11, 7, 131073, 12, 7, 131073, 13, 7, 131073, 14, 7, 131073, 15, 7, 131073, 16, 7, 131073, 17, 7, 131073, 18, 7, 131073, 19, 7, 131073, 20, 7, 131073, 21, 7, 131073, 22, 7, 131073, 23, 7, 131073, 24, 7, 131073, 25, 7, 131073, 26, 7, 131073, 27, 7, 131073, 28, 7, 131073, 29, 7, 131073, 30, 7, 131073, 31, 7, 131073, 32, 7, 131074 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 56, -72 )

[node name="Camera2D" parent="Player/CameraPivot" index="0"]
limit_right = 528

[node name="Spikes" type="Node2D" parent="."]

[node name="Spike" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 136, -48 )

[node name="Spike2" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 232, -48 )

[node name="Spike6" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 376, -32 )

[node name="Spike12" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 392, -32 )

[node name="Spike13" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 408, -32 )

[node name="Spike7" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 424, -32 )

[node name="Spike8" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 392, -176 )

[node name="Spike11" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 344, -176 )

[node name="Spike14" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 296, -176 )

[node name="Spike15" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 280, -192 )

[node name="Spike19" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 120, -192 )

[node name="Spike23" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 168, -192 )

[node name="Spike20" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 296, -320 )

[node name="Spike21" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 312, -320 )

[node name="Spike22" parent="Spikes" instance=ExtResource( 11 )]
position = Vector2( 328, -320 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="CanvasFade" parent="." instance=ExtResource( 3 )]

[editable path="Area2D"]

[editable path="Objects/PortalScene"]

[editable path="Player"]
